<resources>
    <string name="app_name">Here is the News</string>
    <string name="near_the">Near the</string>
    <string name="no_news">No News Found</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="item_placeholder_text_1">Section Name</string>
    <string name="item_placeholder_text_2">Item Name</string>
    <string name="item_placeholder_text_3">Author</string>
    <string name="item_placeholder_text_4">Date</string>
    <string name="item_placeholder_text_5">Time</string>
</resources>
