<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/black_background">


    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image_dimensions"
        android:layout_height="@dimen/image_dimensions"
        android:src="@drawable/news_image"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center_vertical"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:minHeight="@dimen/list_item_height"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/section_name"
            style="@style/WordListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textSize="@dimen/secondary_text_size"
            tools:text="@string/item_placeholder_text_1" />

        <TextView
            android:id="@+id/item_title"
            style="@style/WordListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textStyle="bold"
            android:textSize="@dimen/main_text_size"
            tools:text="@string/item_placeholder_text_2" />

        <TextView
            android:id="@+id/author"
            style="@style/WordListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/secondary_text_size"
            tools:text="@string/item_placeholder_text_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            style="@style/WordListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/Date_text_size"
            tools:text="@string/item_placeholder_text_4" />

        <TextView
            android:id="@+id/time"
            style="@style/WordListStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/Date_text_size"
            tools:text="@string/item_placeholder_text_5" />

    </LinearLayout>
</LinearLayout>